--- a/src/dhis2-execution/dhis2-execution-manual.html
+++ b/src/dhis2-execution/dhis2-execution-manual.html
@@ -1,8 +1,9 @@
 <h4>For manual execution Integration to DHIS-2 Integration Layer, please fill below and click "{{'dhis2.startIntegration' | message}}"</h4>
-<form class="form-inline" ng-submit="vm.addRole()" reload-form>
+<form ng-submit="vm.addRole()" reload-form>
     <div class="form-group">
         <label for="program">{{'dhis2.program' | message}}</label>
-        <select id="program" ng-model="vm.selectedProgram"
+        <select id="program" 
+            ng-model="vm.selectedProgram"
             ng-options="program as program.name for program in vm.programs"
             required>
         </select>
@@ -10,7 +11,8 @@
     
     <div class="form-group">
         <label for="period">{{'dhis2.period' | message}}</label>
-        <select id="period" ng-model="vm.selectedPeriod"
+        <select id="period" 
+            ng-model="vm.selectedPeriod"
             ng-options="period as period for period in vm.periods"
             required>
         </select>
@@ -18,7 +20,12 @@
 
     <div class="form-group">
         <label for="period">{{'dhis2.description' | message}}</label>
-        <input type="text" id="manual-execution-description" ng-model="vm.manualExecutionDescription"></input>
+        <input type="text" 
+            id="manual-execution-description" 
+            ng-model="vm.manualExecutionDescription"
+            characters-left 
+            ng-maxlength="70">
+        </input>
     </div>
     <button type="text" class="add">{{'dhis2.startIntegration' | message}}</button>
 </form>
