--- a/src/dhis2-integration/dhis2-integration.html
+++ b/src/dhis2-integration/dhis2-integration.html
@@ -1,27 +1,12 @@
-<h4>For schedule integration to DHIS-2 Interop Layer fill below data and click "{{'dhis2.addSchedule' | message}}"</h4>
-<form class="form-inline" ng-submit="vm.addRole()" reload-form>
-    <div class="form-group">
-        <label for="program">{{'dhis2.program' | message}}</label>
-        <select id="program" ng-model="vm.selectedProgram"
-            ng-options="program as program.name for program in vm.programs"
-            required>
-        </select>
-    </div>
-    
-    <div>
-        <label for="period">{{'dhis2.period' | message}}</label>
-        <openlmis-cron-selection
-            ng-required="vm.userSubscriptionsMap[digestConfiguration.id].useDigest"
-            ng-model="vm.userSubscriptionsMap[digestConfiguration.id].cronExpression" />
-    </div>
-
-    <div class="form-group">
-            <label for="period">{{'dhis2.description' | message}}</label>
-            <input type="text" id="scheduling-description" ng-model="vm.schedulingDescription"></input>
-        </div>
-    <button type="text" class="add">{{'dhis2.addSchedule' | message}}</button>
-</form>
 <section class="openlmis-table-container">
+    <button type="text" class="add" ui-sref='.add'>{{'dhis2.addSchedule' | message}}</button>
+    <form ng-submit="vm.search()">
+        <fieldset class="form-group">
+            <label for="program">{{'dhis2.program' | message}}</label>
+            <input type="text" id="program" ng-model="vm.program"/>
+        </fieldset>
+        <input type="submit" value="{{'dhis2.search' | message}}"/>
+    </form>
     <table>
         <!-- <caption ng-if="!vm.Execution || vm.Execution.length === 0">
             {{'dhis2.noExecutions' | message}}
@@ -47,7 +32,7 @@
                 <td>Every 10th month at 10 PM</td>
                 <td>Monthly update</td>
                 <td>
-                    <button class="primary" ng-click="vm.removeRole(roleAssignment)">{{'dhis2.update' | message}}</button>
+                    <button class="primary" ui-sref=".edit">{{'dhis2.update' | message}}</button>
                     <button class="danger" ng-click="vm.removeRole(roleAssignment)">{{'dhis2.delete' | message}}</button>
                 </td>
             </tr>
@@ -61,7 +46,7 @@
                 <td>Weekly on Friday at 6 AM</td>
                 <td>Weekly update</td>
                 <td>
-                    <button class="primary" ng-click="vm.removeRole(roleAssignment)">{{'dhis2.update' | message}}</button>
+                    <button class="primary" ui-sref=".edit">{{'dhis2.update' | message}}</button>
                     <button class="danger" ng-click="vm.removeRole(roleAssignment)">{{'dhis2.delete' | message}}</button>
                 </td>
             </tr>
