MW4-27 - deleted retention, added configuration to integration

--- a/src/dhis2-integration-edit/dhis2-integration-form.html
+++ b/src/dhis2-integration-edit/dhis2-integration-form.html
@@ -15,14 +15,22 @@
     </div>
 
     <div class="form-group">
-            <label for="period">{{'dhis2IntegEdit.description' | message}}</label>
-            <input 
-                type="text" 
-                id="scheduling-description" 
-                ng-model="vm.schedulingDescription" 
-                characters-left 
-                ng-maxlength="70">
-            </input>
-        </div>
+        <label for="configuration">{{'dhis2IntegEdit.configuration' | message}}</label>
+        <select id="configuration" ng-model="vm.selectedIntegration"
+            ng-options="configuration as configuration for configuration in vm.configurations"
+            required>
+        </select>
+    </div>
+
+    <div class="form-group">
+        <label for="period">{{'dhis2IntegEdit.description' | message}}</label>
+        <input 
+            type="text" 
+            id="scheduling-description" 
+            ng-model="vm.schedulingDescription" 
+            characters-left 
+            ng-maxlength="70">
+        </input>
+    </div>
     
 </form>
