--- a/src/dhis2-configuration/dhis2-configuration.html
+++ b/src/dhis2-configuration/dhis2-configuration.html
@@ -7,10 +7,6 @@
                 <input type="text" id="authType" ng-model="vm.authType"/>
             </fieldset>
             <fieldset class="form-group">
-                <label for="retention">{{'dhis2.retention' | message}}</label>
-                <input type="text" id="retention" ng-model="vm.retention"/>
-            </fieldset>
-            <fieldset class="form-group">
                 <label for="targetUrl">{{'dhis2.targetUrl' | message}}</label>
                 <input type="text" id="targetUrl" ng-model="vm.targetUrl"/>
             </fieldset>
@@ -24,7 +20,6 @@
                 <tr>
                     <th ng-if="vm.showErrorColumn"></th>
                     <th>{{'dhis2.authType' | message}}</th>
-                    <th>{{'dhis2.retention' | message}}</th>
                     <th>{{'dhis2.targetUrl' | message}}</th>
                     <th>{{'dhis2.actions' | message}}</th>
                     
@@ -38,10 +33,9 @@
                     </td>
                     <td ng-if="vm.showErrorColumn && !roleAssignment.errors.length"></td>
                     <td>Basic</td>
-                    <td>10 days</td>
                     <td>http://lmis-dev.com</td>
                     <td>
-                        <button class="primary" ui-sref='.edit'>{{'dhis2.update' | message}}</button>
+                        <button class="primary" ui-sref='.edit'>{{'dhis2.edit' | message}}</button>
                         <button class="danger" ng-click="vm.removeRole(roleAssignment)">{{'dhis2.delete' | message}}</button>
                     </td>
                 </tr>
@@ -52,10 +46,9 @@
                     </td>
                     <td ng-if="vm.showErrorColumn && !roleAssignment.errors.length"></td>
                     <td>Basic</td>
-                    <td>19 days</td>
                     <td>http://lmis-uat.com</td>
                     <td>
-                        <button class="primary" ui-sref='.edit'>{{'dhis2.update' | message}}</button>
+                        <button class="primary" ui-sref='.edit'>{{'dhis2.edit' | message}}</button>
                         <button class="danger" ng-click="vm.removeRole(roleAssignment)">{{'dhis2.delete' | message}}</button>
                     </td>
                 </tr>
