--- a/src/dhis2-integration/dhis2-integration.html
+++ b/src/dhis2-integration/dhis2-integration.html
@@ -32,7 +32,7 @@
                 <td>Every 10th month at 10 PM</td>
                 <td>Monthly update</td>
                 <td>
-                    <button class="primary" ui-sref=".edit">{{'dhis2.update' | message}}</button>
+                    <button class="primary" ui-sref=".edit">{{'dhis2.edit' | message}}</button>
                     <button class="danger" ng-click="vm.removeRole(roleAssignment)">{{'dhis2.delete' | message}}</button>
                 </td>
             </tr>
@@ -46,7 +46,7 @@
                 <td>Weekly on Friday at 6 AM</td>
                 <td>Weekly update</td>
                 <td>
-                    <button class="primary" ui-sref=".edit">{{'dhis2.update' | message}}</button>
+                    <button class="primary" ui-sref=".edit">{{'dhis2.edit' | message}}</button>
                     <button class="danger" ng-click="vm.removeRole(roleAssignment)">{{'dhis2.delete' | message}}</button>
                 </td>
             </tr>
