MW4-27 - moved ManualExecution to Execution tab

--- a/src/dhis2-execution/dhis2-execution.html
+++ b/src/dhis2-execution/dhis2-execution.html
@@ -1,4 +1,5 @@
 <section class="openlmis-table-container">
+<button type="text" class="add" ui-sref='.manual'>{{'dhis2.manualExecution' | message}}</button>
 <openlmis-sort options="vm.options"/>
     <form ng-submit="vm.search()">
         <fieldset class="form-group">
