--- a/src/dhis2-configuration-edit/dhis2-configuration-edit.html
+++ b/src/dhis2-configuration-edit/dhis2-configuration-edit.html
@@ -2,16 +2,16 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1>{{'dhis2ConfEdit.editConfiguration' | message}}</h1>
+                    <h1>{{'dhis2ConfigurationEdit.editConfiguration' | message}}</h1>
                 </div>
                 <div class="modal-body">
                     <ng-include src="'dhis2-configuration-edit/dhis2-configuration-form.html'"></ng-include>
                 </div>
                 <div class="modal-footer">
-                    <button ng-click="vm.goToConfigurationList()">{{'dhis2ConfEdit.cancel' | message}}</button>
+                    <button ng-click="vm.goToConfigurationList(false)">{{'dhis2ConfigurationEdit.cancel' | message}}</button>
                     <div class="button-group primary">
                         <button class="primary" type="submit"
-                            form="configurationForm">{{'dhis2ConfEdit.editConfiguration' | message}}</button>
+                            form="configurationForm">{{'dhis2ConfigurationEdit.editConfiguration' | message}}</button>
                     </div>
                 </div>
             </div>
