--- a/src/dhis2/dhis2.html
+++ b/src/dhis2/dhis2.html
@@ -1,4 +1,3 @@
-<h2>{{'dhis2.dhis2' | message}}</h2>
-<h3>{{'dhis2.service' | message}}: {{vm.user.username}}</h3>
+<h2>{{'dhis2.serviceName' | message}}</h2>
 <ng-include src="'dhis2/dhis2-tabs.html'"></ng-include>
 <div ui-view=""></div>
