MW4-63: Enable the integration tab

--- a/src/dhis2-integration-edit/dhis2-integration-edit.html
+++ b/src/dhis2-integration-edit/dhis2-integration-edit.html
@@ -2,16 +2,16 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1>{{'dhis2IntegEdit.editIntegration' | message}}</h1>
+                <h1>{{'dhis2IntegrationEdit.editIntegration' | message}}</h1>
             </div>
             <div class="modal-body">
                 <ng-include src="'dhis2-integration-edit/dhis2-integration-form.html'"></ng-include>
             </div>
             <div class="modal-footer">
-                <button ng-click="vm.goToIntegrationList()">{{'dhis2IntegEdit.cancel' | message}}</button>
+                <button ng-click="vm.goToIntegrationList(false)">{{'dhis2IntegrationEdit.cancel' | message}}</button>
                 <div class="button-group primary">
                     <button class="primary" type="submit"
-                        form="integrationForm">{{'dhis2IntegEdit.editIntegration' | message}}</button>
+                        form="integrationForm">{{'dhis2IntegrationEdit.editIntegration' | message}}</button>
                 </div>
             </div>
         </div>
