--- a/src/dhis2-integration-add/dhis2-integration-add.html
+++ b/src/dhis2-integration-add/dhis2-integration-add.html
@@ -2,16 +2,16 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1>{{'dhis2IntegAdd.addIntegration' | message}}</h1>
+                    <h1>{{'dhis2IntegrationAdd.addIntegration' | message}}</h1>
                 </div>
                 <div class="modal-body">
                     <ng-include src="'dhis2-integration-edit/dhis2-integration-form.html'"></ng-include>
                 </div>
                 <div class="modal-footer">
-                    <button ng-click="vm.goToIntegrationList()">{{'dhis2IntegAdd.cancel' | message}}</button>
+                    <button ng-click="vm.goToIntegrationList(false)">{{'dhis2IntegrationAdd.cancel' | message}}</button>
                     <div class="button-group primary">
                         <button class="primary" type="submit"
-                            form="integrationForm">{{'dhis2IntegAdd.addIntegration' | message}}</button>
+                            form="integrationForm">{{'dhis2IntegrationAdd.addIntegration' | message}}</button>
                     </div>
                 </div>
             </div>
