MW4-63: Fixed issue with view duplication after refresh

--- a/src/dhis2/dhis2.html
+++ b/src/dhis2/dhis2.html
@@ -1,3 +1,9 @@
 <h2>{{'dhis2.serviceName' | message}}</h2>
-<ng-include src="'dhis2/dhis2-tabs.html'"></ng-include>
+<nav>
+    <ul>
+        <li ng-repeat="tab in vm.tabs" ui-sref-active="active" role="presentation">
+            <a ui-sref="{{tab.state}}">{{tab.name | message}}</a>
+        </li>
+    </ul>
+</nav>
 <div ui-view=""></div>
