--- a/src/dhis2-integration-list/dhis2-integration-list.html
+++ b/src/dhis2-integration-list/dhis2-integration-list.html
@@ -22,6 +22,7 @@
                 <td>{{integration.configuration.name}}</td>
                 <td>
                     <button class="primary" ui-sref=".edit({id: integration.id})">{{'dhis2IntegrationList.edit' | message}}</button>
+                    <button ui-sref=".execute({id: integration.id})">{{'dhis2IntegrationList.execute' | message}}</button>
                     <button class="danger" ng-click="vm.deleteIntegration(integration)">{{'dhis2IntegrationList.delete' | message}}</button>
                 </td>
             </tr>
