MW4-63: Renamed period label to schedule

--- a/src/dhis2-integration-edit/dhis2-integration-form.html
+++ b/src/dhis2-integration-edit/dhis2-integration-form.html
@@ -5,7 +5,7 @@
         required>
     </select>
     
-    <label for="period">{{'dhis2IntegrationEdit.period' | message}}</label>
+    <label for="period">{{'dhis2IntegrationEdit.schedule' | message}}</label>
     <openlmis-cron-selection ng-model="vm.integration.cronExpression" read-only="false" required/>
 
     <label for="configuration">{{'dhis2IntegrationEdit.configuration' | message}}</label>
