--- a/src/dhis2-integration-list/dhis2-integration-list.html
+++ b/src/dhis2-integration-list/dhis2-integration-list.html
@@ -7,7 +7,7 @@
         <thead>
             <tr>
                 <th>{{'dhis2IntegrationList.program' | message}}</th>
-                <th>{{'dhis2IntegrationList.cronExpression' | message}}</th>
+                <th>{{'dhis2IntegrationEdit.schedule' | message}}</th>
                 <th>{{'dhis2IntegrationList.configuration' | message}}</th>
                 <th>{{'dhis2IntegrationList.actions' | message}}</th>
                 
