--- a/src/dhis2-integration-execute/dhis2-integration-execute.html
+++ b/src/dhis2-integration-execute/dhis2-integration-execute.html
@@ -16,6 +16,8 @@
                             </select>
                         </div>
 
+                        <label for="description">{{'dhis2IntegrationExecute.description' | message}}</label>
+                        <input id="description" type="text" ng-model="vm.description"/>
                     </form>
                 </div>
                 <div class="modal-footer">
