--- a/src/dhis2-execution-list/dhis2-execution-list.html
+++ b/src/dhis2-execution-list/dhis2-execution-list.html
@@ -1,4 +1,5 @@
 <section class="openlmis-table-container">
+    <button type="text" ng-click="vm.refreshPage()">{{'dhis2ExecutionList.refresh' | message}}</button>
     <table>
         <caption ng-if="!vm.executions || vm.executions.length === 0">
             {{'dhis2ExecutionList.noExecutions' | message}}
