MW4-63: Use datetime filter for datetime fields

--- a/src/dhis2-execution-list/dhis2-execution-list.html
+++ b/src/dhis2-execution-list/dhis2-execution-list.html
@@ -16,8 +16,8 @@
         </thead>
         <tbody>
             <tr ng-repeat="execution in vm.executions">
-                <td>{{execution.startDate}}</td>
-                <td>{{execution.endDate}}</td>
+                <td>{{execution.startDate | openlmisDatetime}}</td>
+                <td>{{execution.endDate | openlmisDatetime}}</td>
                 <td>{{vm.periods[execution.processingPeriodId].name}}</td>
                 <td><i ng-class="{'icon-ok':execution.manualExecution}"/></td>
                 <td>{{execution.description}}</td>
