MW4-63 - Added URL validation

--- a/src/dhis2-configuration-edit/dhis2-configuration-form.html
+++ b/src/dhis2-configuration-edit/dhis2-configuration-form.html
@@ -8,6 +8,7 @@
     <label for="targetUrl">{{'dhis2ConfigurationEdit.targetUrl' | message}}</label>
     <input id="targetUrl"
         type="text"
+        ng-pattern="/^(http[s]?:\/\/){0,1}(www\.){0,1}[a-zA-Z0-9\.\-]+\.[a-zA-Z]{2,5}[\.]{0,1}/"
         ng-model="vm.configuration.targetUrl"
         required/>
 
