MW4-71 - Changed name of buttons

--- a/src/dhis2-execution-list/dhis2-execution-list.html
+++ b/src/dhis2-execution-list/dhis2-execution-list.html
@@ -28,8 +28,8 @@
                     </ul>
                 </td>
                 <td>
-                    <button class="primary" ui-sref='.responsebody({id: execution.id})'>{{'dhis2ExecutionList.responseBody' | message}}</button>
-                    <button class="primary" ui-sref='.requestbody({id: execution.id})'>{{'dhis2ExecutionList.requestBody' | message}}</button>
+                    <button class="primary" ui-sref='.responsebody({id: execution.id})'>{{'dhis2ExecutionList.showResponse' | message}}</button>
+                    <button class="primary" ui-sref='.requestbody({id: execution.id})'>{{'dhis2ExecutionList.showRequest' | message}}</button>
                 </td>
             </tr>
         </tbody>
